# Group-32

./: readme.md
progetto_g32/: .gitignore  Cargo.toml  cpu_usage_log.txt  lin_build.sh  macos_build.sh  windows_build.bat
progetto_g32/config/: config.json  config.toml
progetto_g32/configuration_csv/: configuration.csv
progetto_g32/release/macos/: uninstall
progetto_g32/src/: audio.rs  backup.rs  configuration_window.rs  confirmation_window.rs  cpu_logger.rs  finestra_lore.rs  lib.rs  main.rs  main_configuration.rs  mouse_input.rs  mouse_input_confirmation.rs  setup.rs  uninstall.rs
