[package]
name = "progetto_g32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.32.0"           # Per monitorare la CPU
chrono = "0.4"             # Per ottenere timestamp nel log
lazy_static = "1.4"         # Per inizializzare variabili globali come le dimensioni dello schermo
scrap = "0.5"
rdev = "0.4"
rodio = "0.14.0"
device_query = "0.2"
eframe = "0.18.0"
rfd = "0.12"
auto-launch = "0.5.0"

[dependencies.ntapi]
version = "0.4.1"